--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
             <tbody><tr>
               <td>
                 <heading>Selected Publications</heading>
-              <p>My research lies at the intersection of machine learning, computer vision, and natural language processing with an emphasis on modeling semantics in knowledge representation & reasoning.
-		      
+	For the full list of my publications please visit my <a href="https://scholar.google.com/citations?hl=en&user=31seHAMAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> page.		      
+
 <!--		      <p>For the full list of my publications please visit my <a href="https://scholar.google.com/citations?hl=en&user=31seHAMAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> page.</p>
 -->	
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="7">
