--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
             <tbody><tr>
               <td>
                 <heading>Selected Publications</heading>
-	For the full list of my publications please visit my <a href="https://scholar.google.com/citations?hl=en&user=31seHAMAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> page.		      
+	<p> For the full list of my publications please visit my <a href="https://scholar.google.com/citations?hl=en&user=31seHAMAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> page.		      
 
 <!--		      <p>For the full list of my publications please visit my <a href="https://scholar.google.com/citations?hl=en&user=31seHAMAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> page.</p>
 -->	
