--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
                   <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2023 &nbsp; <br>
 		<a href="https://arxiv.org/pdf/2212.05102.pdf">PDF</a> / 
 		<a href=".">project page</a> /
-		  <a href=".">code</a>
+		  <a href="https://github.com/DonkeyShot21/">code</a>
 
                 </p><p></p>
 <!--
@@ -233,7 +233,8 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 			T. Klein, <strong>M. Nabi</strong><br>
                   <em>Association for Computational Linguistics (ACL)</em>, 2023 &nbsp; <br>
                   <a href="https://arxiv.org/abs/2211.04928.pdf">PDF</a> /
-		  <a href="https://huggingface.co/sap-ai-research/miCSE">code</a>
+		  <a href="https://huggingface.co/sap-ai-research/miCSE">project page</a>
+		<a href="https://github.com/SAP-samples/acl2023-micse/">code</a>
 
                 </p><p></p>
 <!--
@@ -253,8 +254,8 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 			E. Fini, P. Astolfi, K. Alahari, X. Alameda-Pineda, J. Mairal, <strong>M. Nabi</strong>, E. Ricci<br>
                   <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2023 &nbsp; <br>
 		<a href="http://lear.inrialpes.fr/~alahari/papers/fini23.pdf">PDF</a> / 
-		<a href=".">project page</a> /
-		  <a href="https://github.com/DonkeyShot21">code</a>
+		<a href="https://github.com/pietroastolfi/suave-daino">project page</a> /
+		  <a href="https://github.com/pietroastolfi/suave-daino">code</a>
 
                 </p><p></p>
 <!--
@@ -523,7 +524,7 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 	<papertitle>Differentially Private Federated Learning: A Client Level Perspective</papertitle></a><br>R. Gayer, T. Klein, <strong>M. Nabi</strong><br>
                   <em>Conference on Neural Information Processing Systems (NIPS)</em>, 2017 &nbsp; <br>
                   <em>Workshop on Machine Learning on the Phone and Consumer Devices</em> &nbsp; <br>
-<!--		<font color="red"><strong> >900 Citations</strong></font><br>      -->
+		<font color="red"><strong> >1000+ Citations</strong></font><br>      
 				
 				
                   <a href="https://arxiv.org/pdf/1712.07557.pdf">PDF</a> /
