--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
             <tbody><tr>
               <td>
                 <heading>Research</heading>
-              <p>My research lies at the intersection of machine learning, computer vision, and natural language processing with an emphasis on modeling semantics in knowledge representation & reasoning.
+              <p>My research lies at the intersection of <strong>privacy-preserving</strong> machine learning, computer vision, and natural language processing with an emphasis on modeling semantics in knowledge representation & reasoning.
 		  </br>
 		    </td>
             </tr>
