--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@ I serve as a topic editor for a Special Issue on Language and Vision by Frontier
 	                <p><a href="https://arxiv.org/abs/2212.05102">
 	<papertitle>A Soft Nearest-neighbor Framework for Continual Semi-supervised Learning</papertitle></a><br>
 			Z. Kang, E. Fini, <strong>M. Nabi</strong>, E. Ricci, K. Alahari<br>
-                  <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2023 &nbsp; <br>
+                  <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2023 &nbsp; <font color="red"><strong>(Oral)</strong></font><br>
 		<a href="https://arxiv.org/pdf/2212.05102.pdf">PDF</a> / 
-		<a href=".">project page</a> /
-		  <a href="https://github.com/DonkeyShot21/">code</a>
+		<a href="https://github.com/kangzhiq/NNCSL">project page</a> /
+		  <a href="https://github.com/kangzhiq/NNCSL">code</a>
 
                 </p><p></p>
 <!--
