--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ I started Computer Vision with Mehrdad Shahshahani
 Prior to my Ph.D., I spent one year as a research assistant at MI&V lab in <a href="http://www.test.com">Sharif University of Technology</a>. I was also fortunate enough to be advised by Professor <a href="http://www.test.com">Mehrdad Shahshahani</a> at the <a href="http://www.test.com">IPM Vision Group</a> from 2009 until 2011. I used to collaborate with IPPR lab at <a href="http://www.test.com">Amirkabir University of Technology</a> under supervision of Professor <a href="http://www.test.com">Mohammad Rahmati</a> as well.
 I received my Master Degree on Artificial Intelligence from Tehran Polytechnic and my Bachelor Degree on Software Engineering from Shomal University at Amol (my home town). -->
                 </p><p align="center">
-<a href="mailto:m.nabi@sap.com">Email</a> &nbsp;/&nbsp;
+<a href="mailto:m.nabi@apple.com">Email</a> &nbsp;/&nbsp;
 <a href="./files/cv.pdf">CV</a> &nbsp;/&nbsp;
 <!--<a href="https://scholar.google.it/citations?user=31seHAMAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp; -->
 <a href="./files/Thesis_compressed.pdf">Thesis</a> &nbsp;/&nbsp;
@@ -113,7 +113,11 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
             <tbody><tr>
               <td>
                 <heading>Research</heading>
-              <p>My research lies at the intersection of <strong>privacy-preserving</strong> machine learning, computer vision, and natural language processing with an emphasis on modeling semantics in knowledge representation & reasoning.
+<!--SECTION 
+		      <p>My research lies at the intersection of <strong>privacy-preserving</strong> machine learning, computer vision, and natural language processing with an emphasis on modeling semantics in knowledge representation & reasoning.
+-->		      
+			<p>I am generally interested in identifying and tackling challenging science problems that bridge the gap between academic research and scalable solutions that reach the public. I enjoy developing simple and efficient machine learning algorithms with broad applicability across various problem domains. My current research focuses on the intersection of machine learning, computer vision, and natural language processing, particularly in modeling semantics within multimodal learning, generation, and reasoning.
+			      
 		  </br>
 		    </td>
             </tr>
