--- a/index.html
+++ b/index.html
@@ -75,14 +75,20 @@
               <td width="68%" valign="middle">
                 <p align="center">
                    <name>Moin Nabi</name>
-                  
+		</p><p align="">I am a Sr. Principal Scientist in the AI and Machine Learning (AI/ML) org at Apple (Z&uuml;rich). 
+<!--			
                 </p><p align="">I am a Principal Scientist at SAP AI CTO office, co-leading the <a href="https://www.sap.com/trends/machine-learning.html">SAP AI Research</a> team in Berlin.
+-->
 </br>
-		  </br>
-
-		      Before this, I was a postdoctoral researcher at University of Trento collaborating with <a href="http://disi.unitn.it/~sebe/">Nicu Sebe</a>, and a visiting scholar at University of Washington<!-- hosted by <a href="http://homes.cs.washington.edu/~ali/">Ali Farhadi</a> -->.
+</br>
+  		Prior to that, I was a Principal Scientist / Manager at SAP, leading the <a href="https://www.sap.com/trends/machine-learning.html">SAP AI Research</a> team in Berlin. 
+		Before that, I was a Postdoctoral Researcher at University of Trento, and a Visiting Scholar at University of Washington. 
+		I received a Ph.D. in Computer Science in 2015, working with <a href="http://profs.sci.univr.it/~swan/">Vittorio Murino</a> from <a href="http://www.iit.it/">Italian Institute of Technology</a> and <a href="http://www0.cs.ucl.ac.uk/staff/m.pontil/">Massimiliano Pontil</a> from University College London (UCL).
+<!--
+		Before this, I was a postdoctoral researcher at University of Trento collaborating with <a href="http://disi.unitn.it/~sebe/">Nicu Sebe</a>, and a visiting scholar at University of Washington hosted by <a href="http://homes.cs.washington.edu/~ali/">Ali Farhadi</a>.
 I received a PhD in computer science in 2015, during which I was advised by <a href="http://profs.sci.univr.it/~swan/">Vittorio Murino</a> from <a href="http://www.iit.it/">Italian Institute of Technology</a> and <a href="http://www0.cs.ucl.ac.uk/staff/m.pontil/">Massimiliano Pontil</a> from UCL. 
-<!--		  </br> I am a board member of the Doctoral School in Industrial Innovation at the University of Trento and a member of <a href="https://ellis.eu/">ELLIS</a> society.     -->
+		  </br> I am a board member of the Doctoral School in Industrial Innovation at the University of Trento and a member of <a href="https://ellis.eu/">ELLIS</a> society. 
+-->		  
 		</br> I am a <a href="https://ellis.eu/members/">member</a> of the European Laboratory for Learning and Intelligent Systems (<a href="https://ellis.eu/">ELLIS</a>) and a <a href="https://elise2oc.fundingbox.com/">scientific advisor</a> for the European Network of AI Excellence Centres (<a href="https://www.elise-ai.eu/">ELISE</a>).	  
 	    </br></br>
 <!--
