--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 I received a PhD in computer science in 2015, during which I was advised by <a href="http://profs.sci.univr.it/~swan/">Vittorio Murino</a> from <a href="http://www.iit.it/">Italian Institute of Technology</a> and <a href="http://www0.cs.ucl.ac.uk/staff/m.pontil/">Massimiliano Pontil</a> from UCL. 
 		  </br> I am a board member of the Doctoral School in Industrial Innovation at the University of Trento and a member of <a href="https://ellis.eu/">ELLIS</a> society. 
 -->		  
-		</br> I am a <a href="https://ellis.eu/members/">member</a> of the European Laboratory for Learning and Intelligent Systems (<a href="https://ellis.eu/">ELLIS</a>) and a <a href="https://elise2oc.fundingbox.com/">scientific advisor</a> for the European Network of AI Excellence Centres (<a href="https://www.elise-ai.eu/">ELISE</a>).	  
+		</br></br> I am a <a href="https://ellis.eu/members/">member</a> of the European Laboratory for Learning and Intelligent Systems (<a href="https://ellis.eu/">ELLIS</a>) and a <a href="https://elise2oc.fundingbox.com/">scientific advisor</a> for the European Network of AI Excellence Centres (<a href="https://www.elise-ai.eu/">ELISE</a>).	  
 	    </br></br>
 <!--
 I am so delighted to start computer vision research with <a href="https://explorecourses.stanford.edu/instructor/mehrdads">Mehrdad Shahshahani</a> at <a href="http://www.ipm.ac.ir/">IPM Vision Group</a>.
@@ -111,7 +111,7 @@ I received my Master Degree on Artificial Intelligence from Tehran Polytechnic a
                 </p>
               </td>
               <!--<td width="33%"><img src="./img/moin_pic_cool.jpg"></td>-->
-				<td> <img src="./img/moin_nabi.jpeg" style="width: 190;"></td></tr>
+				<td> <img src="./img/moin_nabi.jpeg" style="width: 210;"></td></tr>
           </tbody></table>
 
 <!--SECTION -->
