--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
               <td width="68%" valign="middle">
                 <p align="center">
                    <name>Moin Nabi</name>
-		</p><p align="">I am a Sr. Principal Scientist in the AI and Machine Learning (AI/ML) org at Apple (Z&uuml;rich). 
+		</p><p align="">I am a Sr. Principal Scientist in the AI/ML org at Apple (Z&uuml;rich). 
 <!--			
                 </p><p align="">I am a Principal Scientist at SAP AI CTO office, co-leading the <a href="https://www.sap.com/trends/machine-learning.html">SAP AI Research</a> team in Berlin.
 -->
 </br>
 </br>
-  		Prior to that, I was a Principal Scientist / Manager at SAP, leading the <a href="https://www.sap.com/trends/machine-learning.html">SAP AI Research</a> team in Berlin. 
+  		Prior to that, I was a Principal Scientist / Manager at SAP, leading the <a href="https://www.sap.com/products/artificial-intelligence/research.html">SAP AI Research</a> team in Berlin. 
 		Before that, I was a Postdoctoral Researcher at University of Trento, and a Visiting Scholar at University of Washington. 
 		I received a Ph.D. in Computer Science in 2015, working with <a href="http://profs.sci.univr.it/~swan/">Vittorio Murino</a> from <a href="http://www.iit.it/">Italian Institute of Technology</a> and <a href="http://www0.cs.ucl.ac.uk/staff/m.pontil/">Massimiliano Pontil</a> from University College London (UCL).
 <!--
