--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/png" href="http://www.cs.berkeley.edu/~barron/seal_icon.png">
 	
-    <title>Kuldeep Purohit</title>
+    <title>Nabojwal Acharjee</title>
     
     <link href="/img/css" rel="stylesheet" type="text/css">
   </head>
@@ -74,7 +74,7 @@
             <tbody><tr>
               <td width="68%" valign="middle">
                 <p align="center">
-                  <name>Dr. Kuldeep Purohit</name>
+                  <name>Nabojwal Acharjee</name>
                   
                 </p><p align="">I am an Doctoral Student at Tezpur University Assam, where my research work entail the design and development of deep learning models tailored for Medical Image Computing, specifically targeting disease prediction, classification and segmentation tasks. I did my MTech at <a href="http://www.ee.iitm.ac.in/ipcvlab/">Ray Bordoloi Group</a>, Indian Institute of Technology Madras, Chennai under the supervision of <a href="https://nerist.ac.in/faculty/dr-ashok-kumar-ray/">Prof. A. K. Ray</a>. I received my Bachelors Degree in Electronics and Communication Engineering from <a href="https://nerist.ac.in/">North Eastern Regional Institute of Science and Technology, Arunachal Pradesh</a>. My research interest lies at the intersection of Image Processing/Computer Vision and Deep Learning. My recent research projects focused on classification of Primary Brain Tumors from MRI with manifold geometry aware Vision Transformer models.
 </br>
@@ -94,9 +94,9 @@ I did my masters in AI and my bachelors in software engineering in Iran.
 <!--<a href="https://scholar.google.it/citations?user=31seHAMAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp; -->
 <!--<a href="./files/Thesis_compressed.pdf">Thesis</a> &nbsp;/&nbsp; -->
 <!--<a href="https://scholar.google.com/citations?hl=en&user=31seHAMAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> &nbsp;/&nbsp; -->
-<a href="https://scholar.google.com/citations?user=mBftM7QAAAAJ&hl=en&oi=ao">Google Scholar</a> /&nbsp;
-<a href="https://www.linkedin.com/in/kuldeeppurohit3/"> LinkedIn </a> /&nbsp;
-<a href="https://www.csauthors.net/kuldeep-purohit/"> csauthors,net Profile </a> /&nbsp;
+<a href="https://scholar.google.com/citations?user=l-GNGx4AAAAJ&hl=en">Google Scholar</a> /&nbsp;
+<a href="https://www.linkedin.com/in/nabojwal-acharjee/"> LinkedIn </a> /&nbsp;
+<!-- <a href="https://www.csauthors.net/kuldeep-purohit/"> csauthors,net Profile </a> /&nbsp; -->
 <a href="./files/Resume_Kuldeep_Purohit_2024.pdf"> CV </a>
                 </p>
               </td>
