--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
                 <p align="center">
                   <name>Nabojwal Acharjee</name>
                   
-                </p><p align="">I am an Doctoral Student at Tezpur University Assam, where my research work entail the design and development of deep learning models tailored for Medical Image Computing, specifically targeting disease prediction, classification and segmentation tasks. I did my MTech at <a href="http://www.ee.iitm.ac.in/ipcvlab/">Ray Bordoloi Group</a>, Indian Institute of Technology Madras, Chennai under the supervision of <a href="https://nerist.ac.in/faculty/dr-ashok-kumar-ray/">Prof. A. K. Ray</a>. I received my Bachelors Degree in Electronics and Communication Engineering from <a href="https://nerist.ac.in/">North Eastern Regional Institute of Science and Technology, Arunachal Pradesh</a>. My research interest lies at the intersection of Image Processing/Computer Vision and Deep Learning. My recent research projects focused on classification of Primary Brain Tumors from MRI with manifold geometry aware Vision Transformer models.
+                </p><p align="">I am an Doctoral Student at Tezpur University, Assam under the supervision of Prof. D. Hazarika and Prof. V. K. Nath, where my research work entail the design and development of deep learning models tailored for Medical Image Computing, specifically targeting disease prediction, classification and segmentation tasks. During my MTech at <a href="https://nerist.ac.in/">North Eastern Regional Institute of Science and Technology (NERIST) Arunachal Pradesh<a>, I had the oppurtunity to work in the Ray-Bordoloi Group under the guidence of <a href="https://nerist.ac.in/faculty/dr-ashok-kumar-ray/">Prof. A. K. Ray</a> where I worked on AlN/Ga2O3-based HEMT for RF applications. I received my Bachelors Degree in Electronics and Communication Engineering from <a href="https://nerist.ac.in/">North Eastern Regional Institute of Science and Technology, Arunachal Pradesh</a>. 
+		</br>
+			My currentn research interest lies at the intersection of Image Processing/Computer Vision and Deep Learning. My recent research projects focused on classification of Primary Brain Tumors from MRI with manifold geometry aware Vision Transformer models.
+		</br>
 </br>
 		  Email: nabojwal@gmail.com
 		  </br>
