--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                 <p align="center">
                   <name>Nabojwal Acharjee</name>
                   
-                </p><p align="">I am an Doctoral Student at Tezpur University, Assam under the supervision of Prof. D. Hazarika and Prof. V. K. Nath, where my research work entail the design and development of deep learning models tailored for Medical Image Computing, specifically targeting disease prediction, classification and segmentation tasks. During my MTech at <a href="https://nerist.ac.in/">North Eastern Regional Institute of Science and Technology (NERIST) Arunachal Pradesh<a>, I had the oppurtunity to work in the Ray-Bordoloi Group under the guidence of <a href="https://nerist.ac.in/faculty/dr-ashok-kumar-ray/">Prof. A. K. Ray</a> where I worked on AlN/Ga2O3-based HEMT for RF applications. I received my Bachelors Degree in Electronics and Communication Engineering from <a href="https://nerist.ac.in/">North Eastern Regional Institute of Science and Technology, Arunachal Pradesh</a>. 
-		</br>
-			My currentn research interest lies at the intersection of Image Processing/Computer Vision and Deep Learning. My recent research projects focused on classification of Primary Brain Tumors from MRI with manifold geometry aware Vision Transformer models.
+                </p><p align="">I am an Doctoral Student at Tezpur University, Assam under the supervision of Prof. D. Hazarika and Prof. V. K. Nath, where my research work entail the design and development of deep learning models tailored for Medical Image Computing, specifically targeting disease prediction, classification and segmentation tasks. During my MTech at <a href="https://nerist.ac.in/">North Eastern Regional Institute of Science and Technology (NERIST) Arunachal Pradesh</a>, I had the oppurtunity to work in the Ray-Bordoloi Group under the guidence of <a href="https://nerist.ac.in/faculty/dr-ashok-kumar-ray/">Prof. A. K. Ray</a> where I worked on AlN/Ga2O3-based HEMT for RF applications. I received my Bachelors Degree in Electronics and Communication Engineering from <a href="https://nerist.ac.in/">North Eastern Regional Institute of Science and Technology, Arunachal Pradesh</a>. 
+</br>
+			My current research interest lies at the intersection of Image Processing/Computer Vision and Deep Learning. Lately, I have been working on ViTs, NO, SSMs, GAN & DDPM for mediacl imaging.
 		</br>
 </br>
-		  Email: nabojwal@gmail.com
+		 I am open to research opportunities and eager to contribute to collaborative and interdisciplinary research efforts. I can be reached via <a href="mailto:nabojwal@example.com">email</a>.
 		  </br>
 	<!--	      Before that, I was a postdoctoral research fellow in <a href="http://disi.unitn.it/~mhug/index.html">Deep Relational Learning</a> group at the University of Trento with Professor <a href="http://disi.unitn.it/~sebe/">Nicu Sebe</a> and a visiting researcher in the CS department at the <a href="https://www.cs.washington.edu/">University of Washington</a> working with <a href="http://homes.cs.washington.edu/~ali/">Ali Farhadi</a>.
 I did my PhD at the <a href="http://www.iit.it/">Italian Institute of Technology</a> where I was advised by Professor <a href="http://profs.sci.univr.it/~swan/">Vittorio Murino</a> and also working closely with Professor <a href="http://www0.cs.ucl.ac.uk/staff/m.pontil/">Massimiliano Pontil</a> from University College London.
@@ -92,15 +92,15 @@ I did my masters in AI and my bachelors in software engineering in Iran.
 -->
 
                 </p><p align="center">
-<!--<a href="kuldeeppurohit3@gmail.com">Email</a> &nbsp;/&nbsp; -->
-<!--<a href="./files/cv.pdf">CV</a> &nbsp;/&nbsp; -->
+<a href="nabojwal@gmail.com">Email</a> &nbsp;/&nbsp;
+<a href="./files/cv.pdf">CV</a> &nbsp;/&nbsp;
 <!--<a href="https://scholar.google.it/citations?user=31seHAMAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp; -->
 <!--<a href="./files/Thesis_compressed.pdf">Thesis</a> &nbsp;/&nbsp; -->
 <!--<a href="https://scholar.google.com/citations?hl=en&user=31seHAMAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a> &nbsp;/&nbsp; -->
 <a href="https://scholar.google.com/citations?user=l-GNGx4AAAAJ&hl=en">Google Scholar</a> /&nbsp;
 <a href="https://www.linkedin.com/in/nabojwal-acharjee/"> LinkedIn </a> /&nbsp;
 <!-- <a href="https://www.csauthors.net/kuldeep-purohit/"> csauthors,net Profile </a> /&nbsp; -->
-<a href="./files/Resume_Kuldeep_Purohit_2024.pdf"> CV </a>
+<a href="./files/cv_nabojwal.pdf"> CV </a>
                 </p>
               </td>
               <!--<td width="33%"><img src="./img/moin_pic_cool.jpg"></td>-->
