--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@ I did my masters in AI and my bachelors in software engineering in Iran.
           This work presents a comprehensive TCAD-based analysis of AlN/β–Ga<sub>2</sub>O<sub>3</sub> HEMTs with various high-k dielectric passivation layers. The study evaluates DC performance enhancements across Si<sub>3</sub>N<sub>4</sub>, Al<sub>2</sub>O<sub>3</sub>, and HfO<sub>2</sub> configurations, highlighting trade-offs in peak current, threshold voltage, and transconductance.
         </p>
         <p>
-          <strong>Received:</strong> 02 December 2024 |
+<!--           <strong>Received:</strong> 02 December 2024 |
           <strong>Revised:</strong> 23 February 2025 |
           <strong>Accepted:</strong> 24 February 2025 |
-          <strong>Published:</strong> 13 May 2025
+          <strong>Published:</strong> 13 May 2025 -->
         </p>
       </td>
     </tr>
