--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ I did my masters in AI and my bachelors in software engineering in Iran.
             <tbody><tr>
               <td>
                 <heading>News</heading>
+		<p> [2022.11] Selected for the prestigious <strong><a href="https://phd.digitalindia.gov.in/">Visvesvaraya PhD Fellowship, Phase-II</a></strong> funded by <strong>MeitY, Government of India</strong>. </p>
 <!-- 		<p> [2024.07] Invited to be an <strong>Area Chair</strong> for <strong><a href="https://wacv2025.thecvf.com/">IEEE/CVF WACV 2025</a></strong>. </p>
 		<p> [2024.05] Invited to be a reviewer for <strong><a href="https://neurips.cc/Conferences/2024">NeurIPS 2024</a></strong>. </p>
 		<p> [2022.12] Joined <strong><a href="https://about.google/">Google</a></strong> (Mountain View, California) as an <strong>AI/ML Engineer</strong>.</p>		      
@@ -237,10 +238,10 @@ I did my masters in AI and my bachelors in software engineering in Iran.
     <tr>
       <td>
         <br>
-        <p align="right"><font size="3">
-          Erd&ouml;s = 3 (via two paths)
-        </font></p>
-        <p align="right"><font size="2">
+        <p style="text-align: right; font-size: 1em; font-style: italic;">
+  	“Science is the poetry of reality.” – Richard Dawkins
+	</p>
+       <p align="right"><font size="2">
           Thank you for visiting!
         </font></p>
       </td>
