--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </p><p style="text-align: justify;">I am a Doctoral Student at Tezpur University, Assam under the joint supervision of <a href="https://agnigarh.tezu.ernet.in/~deepika/">Prof. D. Hazarika</a> and <a href="https://agnigarh.tezu.ernet.in/~vknath/">Prof. V. K. Nath</a>, where my research work entails design and development of deep learning models tailored for Medical Image Computing, specifically disease prediction, classification, image segmentation and anomaly detection etc. During my MTech at <a href="https://nerist.ac.in/">North Eastern Regional Institute of Science and Technology (NERIST), Arunachal Pradesh</a>, I had the oppurtunity to work in the Ray-Bordoloi-Group under the guidence of <a href="https://nerist.ac.in/faculty/dr-ashok-kumar-ray/">Prof. A. K. Ray</a>, where I worked on AlN/Ga<sub>2</sub>O<sub>3</sub>
 -based HEMT modelling for RF applications. I received my Bachelors Degree in Electronics and Communication Engineering from <a href="https://nerist.ac.in/">North Eastern Regional Institute of Science and Technology, Arunachal Pradesh</a>. 
 </br>
-		My current research interest lies at the intersection of Image Processing/Computer Vision and Deep Learning. Lately, I have been working on ViTs, NO, SSMs, GAN & DDPM for mediacl imaging.
+		My current research interest lies at the intersection of Image Processing/Computer Vision and Deep Learning. Lately, I have been working on ViTs, NO, SSMs, GAN & DDPM for medical imaging.
 		</br>
 </br>
 		 I am open to research opportunities and eager to contribute to collaborative and interdisciplinary research efforts. I can be reached via <a href="mailto:nabojwal@example.com">email</a>.
@@ -135,7 +135,7 @@ I did my masters in AI and my bachelors in software engineering in Iran.
             <tbody><tr>
               <td>
                 <heading>News</heading>
-		<p> [2022.11] Selected for the prestigious <strong><a href="https://phd.digitalindia.gov.in/">Visvesvaraya PhD Fellowship, Phase-II</a></strong> funded by <strong>MeitY, Government of India</strong>. </p>
+		<p> [2022.11] Awarded the prestigious <strong><a href="https://phd.digitalindia.gov.in/">Visvesvaraya PhD Fellowship, (Phase-II)</a></strong> funded by MeitY, Government of India. </p>
 <!-- 		<p> [2024.07] Invited to be an <strong>Area Chair</strong> for <strong><a href="https://wacv2025.thecvf.com/">IEEE/CVF WACV 2025</a></strong>. </p>
 		<p> [2024.05] Invited to be a reviewer for <strong><a href="https://neurips.cc/Conferences/2024">NeurIPS 2024</a></strong>. </p>
 		<p> [2022.12] Joined <strong><a href="https://about.google/">Google</a></strong> (Mountain View, California) as an <strong>AI/ML Engineer</strong>.</p>		      
@@ -218,6 +218,16 @@ I did my masters in AI and my bachelors in software engineering in Iran.
           </tbody></table>
           <table width="100%" align="center" border="0" cellpadding="20">
             <tbody><tr>
+		    <table width="100%" align="center" border="0" cellpadding="20">
+  <tbody>
+    <tr>
+      <td align="center">
+        <i>To be updated soon</i>
+      </td>
+    </tr>
+  </tbody>
+</table>
+		    
 <!----SECTION---->
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
             <tbody><tr>
@@ -228,6 +238,16 @@ I did my masters in AI and my bachelors in software engineering in Iran.
           </tbody></table>
           <table width="100%" align="center" border="0" cellpadding="20">
             <tbody><tr>
+
+		    <table width="100%" align="center" border="0" cellpadding="20">
+  <tbody>
+    <tr>
+      <td align="center">
+        <i>To be updated soon</i>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
 
 
