--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ I did my masters in AI and my bachelors in software engineering in Iran.
 		    <table width="100%" align="center" border="0" cellpadding="20">
   <tbody>
     <tr>
-      <td align="center">
+      <td align="left">
         <i>To be updated soon</i>
       </td>
     </tr>
@@ -242,7 +242,7 @@ I did my masters in AI and my bachelors in software engineering in Iran.
 		    <table width="100%" align="center" border="0" cellpadding="20">
   <tbody>
     <tr>
-      <td align="center">
+      <td align="left">
         <i>To be updated soon</i>
       </td>
     </tr>
