--- a/index.html
+++ b/index.html
@@ -76,14 +76,17 @@
                 <p align="center">
                   <name>Nabojwal Acharjee</name>
                   
-                </p><p style="text-align: justify;">I am a Doctoral Student at Tezpur University, Assam under the joint supervision of <a href="https://agnigarh.tezu.ernet.in/~deepika/">Prof. D. Hazarika</a> and <a href="https://agnigarh.tezu.ernet.in/~vknath/">Prof. V. K. Nath</a>, where my research work entails design and development of deep learning models tailored to Medical Image Computing, specifically disease prediction, classification, image segmentation and anomaly detection etc. During my MTech at <a href="https://nerist.ac.in/">North Eastern Regional Institute of Science and Technology (NERIST), Arunachal Pradesh</a>, I had the oppurtunity to work in the <a href="https://nerist.ac.in/faculty/dr-ashok-kumar-ray/">Ray-Bordoloi-Group</a> under the guidence of <a href="https://nerist.ac.in/faculty/dr-ashok-kumar-ray/">Prof. A. K. Ray</a>, where I worked on AlN/Ga<sub>2</sub>O<sub>3</sub>
--based HEMT modelling for RF applications. I received my Bachelors Degree in Electronics and Communication Engineering from <a href="https://nerist.ac.in/">North Eastern Regional Institute of Science and Technology, Arunachal Pradesh</a>. 
+</p><p style="text-align: justify;">I am currently a doctoral student at Tezpur University, Assam, working under the joint supervision of <a href="https://agnigarh.tezu.ernet.in/~deepika/">Prof. D. Hazarika</a> and <a href="https://agnigarh.tezu.ernet.in/~vknath/">Prof. V. K. Nath</a>. My research focuses on the design and development of deep learning models for medical image computing, with applications in disease prediction, classification, image segmentation, and anomaly detection. 
 </br>
-		My current research interest lies at the intersection of Image Processing/Computer Vision and Deep Learning. Lately, I have been working on ViTs, NO, SSMs, GAN & DDPM for medical imaging.
-		</br>
+Previously, during my M.Tech at the <a href="https://nerist.ac.in/">North Eastern Regional Institute of Science and Technology (NERIST), Arunachal Pradesh</a>, I had the opportunity to work in the <a href="https://nerist.ac.in/faculty/dr-ashok-kumar-ray/">Ray-Bordoloi Group</a> under the guidence of <a href="https://nerist.ac.in/faculty/dr-ashok-kumar-ray/">Prof. A. K. Ray</a>, My work there involved modeling AlN/Ga<sub>2</sub>O<sub>3</sub>-based High Electron Mobility Transistors (HEMTs) for RF applications. 
+I also received my Bachelors Degree in Electronics and Communication Engineering from <a href="https://nerist.ac.in/">NERIST</a>. 
 </br>
-		 I am open to research opportunities and eager to contribute to collaborative and interdisciplinary research efforts. I can be reached via <a href="mailto:nabojwal@example.com">email</a>.
-		  </br>
+</br>
+My current research interests lie at the intersection of image processing, computer vision, and deep learning. Recently, I have been exploring  ViTs, NO, SSMs, GAN & DDPM for for medical imaging tasks.
+</br>
+</br>
+I am actively seeking a Research Intern role. <a href="mailto:nabojwal@example.com">Email: nabojwal@gmail.com</a>.
+</br>
 	<!--	      Before that, I was a postdoctoral research fellow in <a href="http://disi.unitn.it/~mhug/index.html">Deep Relational Learning</a> group at the University of Trento with Professor <a href="http://disi.unitn.it/~sebe/">Nicu Sebe</a> and a visiting researcher in the CS department at the <a href="https://www.cs.washington.edu/">University of Washington</a> working with <a href="http://homes.cs.washington.edu/~ali/">Ali Farhadi</a>.
 I did my PhD at the <a href="http://www.iit.it/">Italian Institute of Technology</a> where I was advised by Professor <a href="http://profs.sci.univr.it/~swan/">Vittorio Murino</a> and also working closely with Professor <a href="http://www0.cs.ucl.ac.uk/staff/m.pontil/">Massimiliano Pontil</a> from University College London.
 	    </br></br>
