--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                   
 </p><p style="text-align: justify;">I am currently a doctoral student at Tezpur University, Assam, working under the joint supervision of <a href="https://agnigarh.tezu.ernet.in/~deepika/">Prof. D. Hazarika</a> and <a href="https://agnigarh.tezu.ernet.in/~vknath/">Prof. V. K. Nath</a>. My research focuses on the design and development of deep learning models for medical image computing, with applications in disease prediction, classification, image segmentation, and anomaly detection. 
 </br>
-Previously, during my M.Tech at the <a href="https://nerist.ac.in/">North Eastern Regional Institute of Science and Technology (NERIST), Arunachal Pradesh</a>, I had the opportunity to work in the <a href="https://nerist.ac.in/faculty/dr-ashok-kumar-ray/">Ray-Bordoloi Group</a> under the guidence of <a href="https://nerist.ac.in/faculty/dr-ashok-kumar-ray/">Prof. A. K. Ray</a>, My work there involved modeling AlN/Ga<sub>2</sub>O<sub>3</sub>-based High Electron Mobility Transistors (HEMTs) for RF applications. 
+Previously, during my M.Tech at the <a href="https://nerist.ac.in/">North Eastern Regional Institute of Science and Technology (NERIST), Arunachal Pradesh</a>, I had the opportunity to work in the <a href="https://nerist.ac.in/faculty/dr-ashok-kumar-ray/">Ray-Bordoloi Group</a> under the guidence of <a href="https://nerist.ac.in/faculty/dr-ashok-kumar-ray/">Prof. A. K. Ray</a>. My work there involved modeling AlN/Ga<sub>2</sub>O<sub>3</sub>-based High Electron Mobility Transistors (HEMTs) for RF applications. 
 I also received my Bachelors Degree in Electronics and Communication Engineering from <a href="https://nerist.ac.in/">NERIST</a>. 
 </br>
 </br>
-My current research interests lie at the intersection of image processing, computer vision, and deep learning. Recently, I have been exploring  ViTs, NO, SSMs, GAN & DDPM for for medical imaging tasks.
+My current research interests lie at the intersection of Image processing, Computer Vision, and Deep Learning. Recently, I have been exploring  ViTs, NO, SSMs, GAN & DDPM for for medical imaging tasks.
 </br>
 </br>
 I am actively seeking a Research Intern role. <a href="mailto:nabojwal@example.com">Email: nabojwal@gmail.com</a>.
