--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@ Previously, during my M.Tech at the <a href="https://nerist.ac.in/">North Easter
 I also received my Bachelors Degree in Electronics and Communication Engineering from <a href="https://nerist.ac.in/">NERIST</a>. 
 </br>
 </br>
-My current research interests lie at the intersection of Image processing, Computer Vision, and Deep Learning. Recently, I have been exploring  ViTs, NO, SSMs, GAN & DDPM for for medical imaging tasks.
+My current research interests lie at the intersection of Image Processing/Computer Vision, and Deep Learning. Recently, I have been exploring  ViTs, NO, SSMs, GAN & DDPM for for medical imaging tasks.
 </br>
 </br>
-I am actively seeking a Research Intern role. <a href="mailto:nabojwal@example.com">Email: nabojwal@gmail.com</a>.
+I am actively seeking a Research Intern role. 
+<!-- 		  <a href="mailto:nabojwal@example.com">Email: nabojwal@gmail.com</a>. -->
 </br>
 	<!--	      Before that, I was a postdoctoral research fellow in <a href="http://disi.unitn.it/~mhug/index.html">Deep Relational Learning</a> group at the University of Trento with Professor <a href="http://disi.unitn.it/~sebe/">Nicu Sebe</a> and a visiting researcher in the CS department at the <a href="https://www.cs.washington.edu/">University of Washington</a> working with <a href="http://homes.cs.washington.edu/~ali/">Ali Farhadi</a>.
 I did my PhD at the <a href="http://www.iit.it/">Italian Institute of Technology</a> where I was advised by Professor <a href="http://profs.sci.univr.it/~swan/">Vittorio Murino</a> and also working closely with Professor <a href="http://www0.cs.ucl.ac.uk/staff/m.pontil/">Massimiliano Pontil</a> from University College London.
