--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Previously, during my M.Tech at the <a href="https://nerist.ac.in/">North Easter
 I also received my Bachelors Degree in Electronics and Communication Engineering from <a href="https://nerist.ac.in/">NERIST</a>. 
 </br>
 </br>
-My current research interests lie at the intersection of Image Processing/Computer Vision, and Deep Learning. Recently, I have been exploring  ViTs, NO, SSMs, GAN & DDPM for for medical imaging tasks.
+My current research interests lie at the intersection of Image Processing/Computer Vision and Deep Learning. Recently, I have been exploring  ViTs, NO, SSMs, GAN & DDPM for for medical imaging tasks.
 </br>
 </br>
 I am actively seeking a Research Intern role. 
@@ -139,7 +139,7 @@ I did my masters in AI and my bachelors in software engineering in Iran.
             <tbody><tr>
               <td>
                 <heading>News</heading>
-		<p> [2022.11] Awarded the prestigious <strong><a href="https://phd.digitalindia.gov.in/">Visvesvaraya PhD Fellowship, (Phase-II)</a></strong> funded by MeitY, Government of India. </p>
+		<p> [2022.11] Awarded the prestigious <a href="https://phd.dic.gov.in/">Visvesvaraya PhD Fellowship, (Phase-II)</a> funded by MeitY, Government of India. </p>
 <!-- 		<p> [2024.07] Invited to be an <strong>Area Chair</strong> for <strong><a href="https://wacv2025.thecvf.com/">IEEE/CVF WACV 2025</a></strong>. </p>
 		<p> [2024.05] Invited to be a reviewer for <strong><a href="https://neurips.cc/Conferences/2024">NeurIPS 2024</a></strong>. </p>
 		<p> [2022.12] Joined <strong><a href="https://about.google/">Google</a></strong> (Mountain View, California) as an <strong>AI/ML Engineer</strong>.</p>		      
