--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ I did my masters in AI and my bachelors in software engineering in Iran.
           <a href="https://doi.org/10.1134/S1063782624602632">DOI: 10.1134/S1063782624602632</a>
         </p>
         <p>
-          This work presents a comprehensive TCAD-based analysis of AlN/β–Ga<sub>2</sub>O<sub>3</sub> HEMTs with various high-k dielectric passivation layers. The study evaluates DC performance enhancements across Si<sub>3</sub>N<sub>4</sub>, Al<sub>2</sub>O<sub>3</sub>, and HfO<sub>2</sub> configurations, highlighting trade-offs in peak current, threshold voltage, and transconductance.
+          <p style="text-align: justify;">This work presents a comprehensive TCAD-based analysis of AlN/β–Ga<sub>2</sub>O<sub>3</sub> HEMTs with various high-k dielectric passivation layers. The study evaluates DC performance enhancements across Si<sub>3</sub>N<sub>4</sub>, Al<sub>2</sub>O<sub>3</sub>, and HfO<sub>2</sub> configurations, highlighting trade-offs in peak current, threshold voltage, and transconductance.
         </p>
         <p>
 <!--           <strong>Received:</strong> 02 December 2024 |
