--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ I did my masters in AI and my bachelors in software engineering in Iran.
                 </p>
               </td>
               <!--<td width="33%"><img src="./img/moin_pic_cool.jpg"></td>-->
-				<td> <img src="./img/nabo_photo.jpg" style="width: 300;"></td></tr> 
+	<td> <img src="./img/nabo_photo.jpg" style="width: 300; border-radius: 15px;"></td></tr> 
           </tbody></table>
  <!--         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
             <tbody><tr>
