--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ I did my masters in AI and my bachelors in software engineering in Iran.
       <td>
         <br>
         <p style="text-align: right; font-size: 1em; font-style: italic;">
-  	“Science is the poetry of reality.” – Richard Dawkins
+  	“The more I study science, the more I believe in God.” – Albert Einstein
 	</p>
        <p align="right"><font size="2">
           Thank you for visiting!
