--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ I did my masters in AI and my bachelors in software engineering in Iran.
 <a href="https://scholar.google.com/citations?user=l-GNGx4AAAAJ&hl=en">Google Scholar</a> /&nbsp;
 <a href="https://www.linkedin.com/in/nabojwal-acharjee/"> LinkedIn </a> /&nbsp;
 <!-- <a href="https://www.csauthors.net/kuldeep-purohit/"> csauthors,net Profile </a> /&nbsp; -->
-<a href="./files/cv_nabojwal.pdf"> CV </a>
+<a href="./files/cv_nabojwal.pdf"> CV </a> /&nbsp;
 <a href="https://nabojwal.wordpress.com/blog">Blogs</a>
 </p>
 </td>
