--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ I did my masters in AI and my bachelors in software engineering in Iran.
 <a href="https://www.linkedin.com/in/nabojwal-acharjee/"> LinkedIn </a> /&nbsp;
 <!-- <a href="https://www.csauthors.net/kuldeep-purohit/"> csauthors,net Profile </a> /&nbsp; -->
 <a href="./files/cv_nabojwal.pdf"> CV </a> /&nbsp;
-<a href="https://avikalpana.wordpress.com/">Blogs</a>
+<a href="https://nabojwal.wordpress.com/">Blogs</a>
 </p>
 </td>
 <!--<td width="33%"><img src="./img/moin_pic_cool.jpg"></td>-->
